# flask-devkit

./: .gitignore  CHANGELOG.md  GEMINI.md  README.ar.md  README.md  TODO  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
docs/: 01-setup.md  02-devkit-class.md  03-init-app.md  04-register-service.md  05-register-repository.md  06-core-concepts.md  07-base-repository.md  08-base-service.md  09-unit-of-work.md  10-model-mixins.md  11-register-crud-routes.md  12-create-crud-schemas.md  13-users-module-overview.md  14-user-models.md  15-user-service.md  16-role-service.md  17-permission-service.md  18-api-reference.md  19-permission-required.md  20-auditing-system.md  21-auditlog-model.md  22-error-handling.md  23-cli-commands.md  27-custom-routes.md  28-error-handlers.md  29-pagination-schema.md  30-base-schemas.md  31-logging.md  32-advanced-filtering.md  33-deletion-strategies.md  34-archived-record-model.md  35-log-activity-decorator.md  36-rate-limiting.md  37-pagination-result.md  38-db-object.md  DOCUMENTATION_PLAN.md  README.md
example-project/: .env.example  .gitignore  README.ar.md  README.md  pyproject.toml
example-project/showcase_app/: __init__.py  cli.py
example-project/showcase_app/models/: post.py
example-project/showcase_app/repositories/: user.py
example-project/showcase_app/routes/: post.py
example-project/showcase_app/schemas/: post.py
example-project/showcase_app/services/: post.py
example-project/tests/: conftest.py  test_app.py
flask_devkit/: __init__.py  database.py  logging.py
flask_devkit/audit/: __init__.py  listeners.py  models.py
flask_devkit/auth/: decorators.py
flask_devkit/core/: archive.py  cli.py  exceptions.py  mixins.py  repository.py  service.py  unit_of_work.py
flask_devkit/helpers/: decorators.py  routing.py  schemas.py
flask_devkit/users/: bootstrap.py  cli.py  models.py  routes.py  schemas.py  services.py
migrations/: env.py
migrations/versions/: 19a2e925c36e_add_audit_log_table.py  7bd513569a82_initial_devkit_models.py
tests/: conftest.py  helpers.py  test_cli.py  test_init.py  test_logging.py
tests/audit/: test_auditing.py
tests/auth/: test_auth_decorators.py
tests/core/: test_exceptions.py  test_integrity_errors.py  test_mixins.py  test_repository.py  test_repository_filters.py  test_repository_pk.py  test_services.py
tests/helpers/: test_helper_decorators.py  test_routing.py  test_schemas.py
tests/users/: conftest.py  test_e2e.py  test_permissions.py  test_schemas.py  test_services.py
